--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TMS</string>
+    <string name="confirm">подтвердить</string>
+    <string name="enter_the_number">введите число</string>
+    <string name="countdown_time">время обратного отсчета</string>
 </resources>
