--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">TMS</string>
+    <string name="gomel_region">Гомельская обл.</string>
+    <string name="vitebsk_region">Витебская обл.</string>
+    <string name="minsk_region">Минская обл.</string>
+    <string name="win">ПОБЕДА!!!</string>
 </resources>
