--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="countdown_time">время обратного отсчета</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="dz14">dz14</string>
+    <string name="dz15">Dz15</string>
 </resources>
