--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="dz14">dz14</string>
     <string name="dz15">Dz15</string>
+    <string name="textRange">Введите число в диапазоне от 5 до 155</string>
+    <string name="band">введите число от 25 до 100</string>
+    <string name="check">Проверить</string>
+    <string name="notification">уведомление</string>
 </resources>
